docs-archive/apache-airflow-providers-amazon/9.35.0/_sources/_api/airflow/providers/amazon/aws/transfers/s3_to_ftp/index.rst.txt
airflow.providers.amazon.aws.transfers.s3_to_ftp
================================================

.. py:module:: airflow.providers.amazon.aws.transfers.s3_to_ftp


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.transfers.s3_to_ftp.S3ToFTPOperator


Module Contents
---------------

.. py:class:: S3ToFTPOperator(*, s3_bucket, s3_key, ftp_path, s3_filenames = None, ftp_filenames = None, aws_conn_id='aws_default', ftp_conn_id='ftp_default', fail_on_file_not_exist = True, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   This operator enables the transferring of files from S3 to a FTP server.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:S3ToFTPOperator`

   :param s3_bucket: The targeted s3 bucket. This is the S3 bucket from
       where the file is downloaded.
   :param s3_key: The targeted s3 key. For a single file it must include the file
       path. For multiple files it is the key prefix (directory) and must end with
       ``"/"``.
   :param s3_filenames: Only used if you want to move multiple files. You can pass
       a list with exact key suffixes present under the s3_key prefix, or a string
       prefix that all filenames must match. Use ``"*"`` to move all objects under
       the s3_key prefix.
   :param ftp_path: The ftp remote path. For a single file it must include the file
       path. For multiple files it is the destination directory path and must end
       with ``"/"``.
   :param ftp_filenames: Only used if you want to move multiple files and name them
       differently at the destination. It can be a list of filenames or a string
       prefix that replaces the s3 prefix.
   :param aws_conn_id: reference to a specific AWS connection
   :param ftp_conn_id: The ftp connection id. The name or identifier for
       establishing a connection to the FTP server.
   :param fail_on_file_not_exist: If True, operator fails when a source S3 key does not
       exist. If False, the operator logs a warning and skips the transfer. Default is True.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('s3_bucket', 's3_key', 'ftp_path', 's3_filenames', 'ftp_filenames')



   .. py:attribute:: s3_bucket


   .. py:attribute:: s3_key


   .. py:attribute:: ftp_path


   .. py:attribute:: s3_filenames
      :value: None



   .. py:attribute:: ftp_filenames
      :value: None



   .. py:attribute:: aws_conn_id
      :value: 'aws_default'



   .. py:attribute:: ftp_conn_id
      :value: 'ftp_default'



   .. py:attribute:: fail_on_file_not_exist
      :value: True



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



